samples/_failures_safe/1761044226_16849e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d166d247.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_d166d247.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d166d247.c:163:9: error: expected declaration or statement at end of input
